syntax = "proto3";


option go_package="https://github.com/NAVANEESHKM/ecommerce_order";
package order_proto;


message CustomerOrder{
    string Id=1;
    string CustomerId=2;
    string PaymentId=3;
    string PaymentStatus=4;
    string Status=5;
    string Currency=6;
    repeated string Items=7;
    repeated Shipping Shipping=8;
    string Carrier=9;
    string Tracking=10;
}
message Shipping {
    repeated Address Address=1;
    repeated Origin Origin=2;
}

message Address {
    string Street1=1;
    string Street2=2;
    string City=3;
    string State=4;
    string Country=5;
    string Zip=6;
}

message Origin {
    string Street1=1;
    string Street2=2;
    string City=3;
    string State=4;
    string Country=5;
    string Zip=6;
}

message CustomerResponse {
    string Id=1;
    string CustomerId=2;
    string PaymentId=3;
    string PaymentStatus=4;
    string Status=5;
    string Currency=6;
}

